    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

4.1.1 to 4.2: (xxx xx, 2014)

  * Fixed 'MDM' scheme to trigger bankswitching on writes to hotspots
    (previously it only triggered on reads).

-Have fun!


4.1 to 4.1.1: (September 14, 2014)

  * Re-added 'uipalette' option due to popular demand (of at least one
    person :)).

  * Fixed bug in Windows port where pressing 'Alt' key combos resulted in
    an annoying system beep.  Currently this is fixed by patching the SDL2
    library and including a modified version with Stella.


4.0 to 4.1: (September 1, 2014)

  * Improved 'DASH' bankswitching scheme support; there is now a debugger
    tab for changing banks and viewing internal cart RAM, and
    autodetection is now implemented.

  * Added 'MDM' (Menu Driven Megacart) bankswitch scheme as described on
    AtariAge and originally developed by Edwin Blink.

  * Improved snapshot viewing in the ROM launcher; snapshots are now
    scaled to the available space, and can better accommodate sizes
    other than those generated by Stella itself.

  * Improved support on multi-monitor systems.  Stella will now use the
    same monitor for fullscreen-windowed mode switches.  Special thanks
    to Magnus Lind for patches that added this functionality.

  * Removed the 'bank' command from the debugger prompt, as it only worked
    (inconsistently) with certain bankswitch types.  The bankswitch UI
    should now be used to query/set bank state.

  * Fixed bug in disassembly output; instructions at $F000 were never
    being highlighted during execution.

  * The UNIX configure script now supports newer versions of Hurd.
    Special thanks to Stephen Kitt for the patch.


3.9.3 to 4.0: (July 1, 2014)
